--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.13.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.1"
@@ -34,6 +35,6 @@
     ]
   },
   "resolution": {
-    "styled-components" :"^5"
+    "styled-components": "^5"
   }
 }
