--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.13.0",
+    "react-icon": "^1.0.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.1"
   },
