--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
